packages/react-components/SideMenu/index.module.css
@value menu-width: 18rem;

.button {
  background: none;
  border: none;
  color: hsl(0deg 0% 100%);
  outline: none;

  @media screen and (width <=1024px) {
    display: block;
  }

  &.code,
  &.gui {
    @media screen and (width >=1024px) {
      display: block;
    }
  }
}

.sideMenuWrapper {
  height: 100%;

  @media screen and (width >1024px) {
    margin-left: menu-width;
  }

  /* &.gui {
    margin-left: 0;
  } */

  &.code,
  &.gui {
    @media screen and (width >1024px) {
      margin-left: 0;
      transition: ease-out 0.15s;

      &.open {
        margin-left: menu-width;
        transition: ease-in 0.15s;
      }
    }
  }
}

.sideMenu {
  background-color: hsl(0deg 0% 100%);
  bottom: 0;
  box-shadow: 0 0 1em -0.125em hsl(0deg 0% 4% / 10%);
  display: flex;
  flex-flow: column;
  left: calc(-1 * menu-width);
  overflow-y: auto;
  position: fixed;

  /* This matches the size of the navbar */
  top: 3.25rem;
  transition: left 0.15s;
  width: menu-width;

  /* Should be less than the z-index of the modal component and should be more than the main screen of the app */

  @media screen and (width =1024px) {
    z-index: 1500;
  }

  /* Shows the side menu  when on a big screen */
  @media screen and (width >1024px) {
    left: 0;
    z-index: auto !important;
  }

  /* Shows the side menu when opened on a small screen */
  &.open {
    left: 0;
    z-index: 1500;
  }

  /* Overrides the side menu behaviour on the code and GUI editor pages */
  &.code,
  &.gui {
    @media screen and (width >1024px) {
      left: calc(-1 * menu-width);
      transition: ease-out 0.1s;

      /* Shows the side menu when opened on a big screen */
      &.open {
        left: 0;
        transition: ease-in 0.1s;
      }
    }

    /* Shows the side menu when opened on a small screen */
    &.open {
      left: 0;
    }
  }
}

.backdrop {
  background-color: rgb(0 0 0 / 50%);
  inset: 3.25rem 0 0;
  opacity: 1;
  position: fixed;

  /* This matches the size of the navbar */
  transition: opacity 0.15s;
  z-index: 1400;

  @media screen and (width >1024px) {
    display: none;
  }

  &.closed {
    opacity: 0;
    pointer-events: none;
  }

  /* &.gui {
    display: none;
    left: calc(-1 * menu-width);
  } */
}

